tests/baselines/reference/derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.errors.txt
derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.ts(14,36): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.


==== derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.ts (1 errors) ====
    class Base {
        foo(x: { a: number }): { a: number } {
            return null;
        }
    }
    
    class Derived extends Base {
        foo(x: { a: number; b: number }): { a: number; b: number } {
            return null;
        }
    
        bar() {
            var r = super.foo({ a: 1 }); // { a: number }
            var r2 = super.foo({ a: 1, b: 2 }); // { a: number }
                                       ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.
            var r3 = this.foo({ a: 1, b: 2 }); // { a: number; b: number; }
        }
    }